@@ -10,7 +10,9 @@ lib_LTLIBRARIES = libdatrie.la
 libdatrie_la_SOURCES =	\
 	typedefs.h	\
 	triedefs.h	\
+	fileutils.h	\
 	darray.h	\
+	darray.c	\
 	tail.h		\
 	trie.h		\
 	trie.c
